--- a/Predictive Modeling.ipynb
+++ b/Predictive Modeling.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:93e272b65ef09e700f6d681ec6f2aff8cb45b1a7ebda547261cf38f1de9f95c4"
+  "signature": "sha256:d192d9d50d82bf1e66532f74b4aafd1c45670f21d901305e0544a46964fb0be7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,7 +13,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Covariance Shift"
+      "Covariate Shift"
      ]
     },
     {
