--- a/Predictive Modeling.ipynb
+++ b/Predictive Modeling.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0f46004efb1468d0b4f9ed2a661603832cbd582263e85cbfb368643c2fb0ec87"
+  "signature": "sha256:fdc44824f05ccbe35fe77c2c555d8a8742701dd08aa4e732cabc01c6e4c685a4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -299,6 +299,21 @@
       "A support vector machine (SVM) is an algorithm that uses a nonlinear mapping to transform the original training data into a higher dimension. Within this new dimension, it searches for the linear optimal separating hyperplane. A hyperplane is a \u201cdecision boundary\u201d separating the tuples of one class from another. With an appropriate nonlinear mapping to a sufficiently high dimension, data from two classes can always be separated by a hyperplane. The SVM finds this hyperplane using support vectors (\u201cessential\u201d training tuples) and margins (defined by the support vectors).\n",
       "\n",
       "Although the training time of even the fastest SVMs can be extremely slow, they are highly accurate, owing to their ability to model complex nonlinear decision boundaries. They are much less prone to over fitting than other methods"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Regularization"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "While optimizing the fit to the data, we also optimize the simplicity of the model. Models which fit data and also simmpler are better models. Reducing the complexity helps us aviod overfitting so that our model can generalize to different data sets. This general methodology is called regularization. Ridge regression and lasso are examples of using regularization. "
      ]
     },
     {
