tweet question added

--- a/Predictive Modeling.ipynb
+++ b/Predictive Modeling.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fdc44824f05ccbe35fe77c2c555d8a8742701dd08aa4e732cabc01c6e4c685a4"
+  "signature": "sha256:59e0d3caba8ed7924ab9160ecf2353ebc41b896ea9b3e4f9ef58abc47c6cc608"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -317,12 +317,21 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "heading",
+     "level": 2,
      "metadata": {},
-     "outputs": []
+     "source": [
+      "How to estimate the number of retweets?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "You can run GLM using the features described in this paper: http://www-users.cs.umn.edu/~echi/papers/2010-socialcom/2010-06-25-retweetability-cameraready-v3.pdf\n",
+      "\n",
+      "Basically, they make use of both content and contextual features. Content features include the number of URLs and hastags and contextual features include the number of followers and followees and the age of the account. The number and frequency tweets and the number of favorited tweets seem not to matter much."
+     ]
     }
    ],
    "metadata": {}
