--- a/Predictive Modeling.ipynb
+++ b/Predictive Modeling.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:59e0d3caba8ed7924ab9160ecf2353ebc41b896ea9b3e4f9ef58abc47c6cc608"
+  "signature": "sha256:fe641708e4e0ecbc7b79094dc4c2f3b5c36364f179c48544de18544cbbe6d001"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -332,6 +332,29 @@
       "\n",
       "Basically, they make use of both content and contextual features. Content features include the number of URLs and hastags and contextual features include the number of followers and followees and the age of the account. The number and frequency tweets and the number of favorited tweets seem not to matter much."
      ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "How to predict the weather using social media?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "http://www.quora.com/How-could-you-collect-and-analyze-data-to-use-social-media-to-predict-the-weather you could grab data from the Twitter, Facebook, Flickr et al public APIs filtered by location, then run some natural language processing routines over the content to extract a relevant metric from the text features i.e. words, 2-grams. Then you can compare that time-series to rainfall data or some such using e.g. @Granger causality or even go crazy and try to learn a more complex relationship using a @Kalman filter . But, excuse me if I'm missing the point, any lead time that you find in a social media signal for predicting the weather will be coincidental. Unless you are focusing on the small subset of Twitter users that have enough money to use technology that can affect the weather"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
