--- a/Predictive Modeling.ipynb
+++ b/Predictive Modeling.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fe641708e4e0ecbc7b79094dc4c2f3b5c36364f179c48544de18544cbbe6d001"
+  "signature": "sha256:55d90953ecbf9a45c0d240c67c95e0d6871be99e0cd20223d5ad6937d4faf07b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -346,6 +346,21 @@
      "metadata": {},
      "source": [
       "http://www.quora.com/How-could-you-collect-and-analyze-data-to-use-social-media-to-predict-the-weather you could grab data from the Twitter, Facebook, Flickr et al public APIs filtered by location, then run some natural language processing routines over the content to extract a relevant metric from the text features i.e. words, 2-grams. Then you can compare that time-series to rainfall data or some such using e.g. @Granger causality or even go crazy and try to learn a more complex relationship using a @Kalman filter . But, excuse me if I'm missing the point, any lead time that you find in a social media signal for predicting the weather will be coincidental. Unless you are focusing on the small subset of Twitter users that have enough money to use technology that can affect the weather"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "How to construct a feed to show relavent content for a site that involves interactions with items?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "I would use a similar algorithm to EdgeRank which is used by facebook http://techcrunch.com/2010/04/22/facebook-edgerank/. Basially, I will assign a score to each object (post) and rank them in a decreasing order and show only some items which have higher scores. This score can be a function of the relationship between users, comments and likes that the object got from other users and also time."
      ]
     },
     {
