people you may know feature

--- a/Predictive Modeling.ipynb
+++ b/Predictive Modeling.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:55d90953ecbf9a45c0d240c67c95e0d6871be99e0cd20223d5ad6937d4faf07b"
+  "signature": "sha256:2a5a2d0a90558796b39210f4feb2bf1f0cb288979f67139864fdf50f7331add0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -364,9 +364,19 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "How would you design the people you may know feature on linkedin or Facebook?"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "I would assign probability of connections based on common features such as location, skills and etc."
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
